# boost_python_cmake

./: CMakeLists.txt  simple.cpp
